--- a/ReadForBlind/ReadForBlind.csproj
+++ b/ReadForBlind/ReadForBlind.csproj
@@ -160,6 +160,7 @@
     <Content Include="Images\c1.png" />
     <Content Include="Images\c2.png" />
     <Content Include="Images\helloworld.jpg" />
+    <Content Include="Images\m20.jpg" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\AppResources.resx">
@@ -173,6 +174,9 @@
     </Reference>
     <Reference Include="Microsoft.Hawaii.Ocr.Client">
       <HintPath>libs\Microsoft.Hawaii.Ocr.Client.dll</HintPath>
+    </Reference>
+    <Reference Include="WriteableBitmapExWinPhone">
+      <HintPath>libs\WriteableBitmapExWinPhone.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup />
