--- a/ReadForBlind/ReadForBlind.csproj
+++ b/ReadForBlind/ReadForBlind.csproj
@@ -106,6 +106,9 @@
       <DependentUpon>AppResources.resx</DependentUpon>
     </Compile>
     <Compile Include="Utils.cs" />
+    <Compile Include="Views\Camera.xaml.cs">
+      <DependentUpon>Camera.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\LoadingPage.xaml.cs">
       <DependentUpon>LoadingPage.xaml</DependentUpon>
     </Compile>
@@ -121,6 +124,9 @@
     <Page Include="MainPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\Camera.xaml">
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\LoadingPage.xaml">
       <SubType>Designer</SubType>
